--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   </nav>
         
             <section>
-            <div id="carouselExampleIndicators" class="carousel slide slide-home" data-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide slide-home text-cor" data-ride="carousel">
                     <ol class="carousel-indicators">
                       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -69,21 +69,21 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img class="d-block w-100" src="at_rob.png" alt="First slide">
-                            <div class="carousel-caption ">
+                            <div class="carousel-caption text-cor ">
                                 <h5>Automação</h5>
                                 <p>Robótica, Integração, Digital</p>
                             </div>
                       </div>
                       <div class="carousel-item">
                         <img class="d-block w-100" src="mfg.png" alt="Second slide">
-                        <div class="carousel-caption ">
+                        <div class="carousel-caption text-cor">
                                 <h5>Manufatura</h5>
                                 <p>Avançada, Tecnologias, Indústria 4.0</p>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <img class="d-block w-100" src="eln.png" alt="Third slide">
-                        <div class="carousel-caption">
+                        <div class="carousel-caption text-car">
                                 <h5>Eletrônica</h5>
                                 <p>Projeto, Microeletrônica, Circuito Impresso</p>
                         </div>
